Fixed some spacings

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,13 @@ body {
 .see-all-btn:hover {
   color: var(--accent-primary);
 }
+.items-container {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  gap: 3.2rem;
+  margin-top: 2.4rem;
+}
 /* ==== HEADER ==== */
 header {
   display: flex;
@@ -50,7 +57,7 @@ header {
 }
 .right-elements {
   display: flex;
-  gap: 4rem;
+  gap: 1.6rem;
   align-items: center;
 }
 /* LOGO */
@@ -101,14 +108,6 @@ li:hover,
   text-align: right;
 }
 /* GAME SECTION */
-.games-container {
-  display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-
-  gap: 3.2rem;
-  margin-top: 2.4rem;
-}
 .game {
   width: 25rem;
   height: 15rem;
@@ -125,6 +124,7 @@ li:hover,
 }
 .game:hover {
   background: linear-gradient(45deg, #9198e5, #e66465);
+  box-shadow: 0 0 20px var(--accent-primary);
 }
 .hidden {
   display: none;
